--- a/index.css
+++ b/index.css
@@ -1,23 +1,76 @@
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: #FBFFF4;
-  height: 100%;
+  background-color: grey;
+  height: 80px;
   width: 100%;
+  flex-shrink: 0;
 }
 
 main {
-  background-color: #92C9D5;
+  display: flex;
+  background-color: grey;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 footer {
   background-color: #DAEEEF;
-  height: 100%;
+  height: 30px;
   width: 100%;
+  flex-shrink: 0;
+  
+}
+
+.flex-container {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
+}
+
+
+a {
+    font-family: helvetica;
+    color: black;
+    text-decoration: none;
+    
+}
+
+
+a:hover {
+    color: #DAEEEF;
+}
+
+
+article {
+    display: flex;
+    flex-flow: row wrap;
+    flex-direction: column;
+    font-family: helvetica;
+    font-size: 20px;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  flex-flow: row wrap;  
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+}
+
+img {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+h1 {
+  margin-left: 20px;
 }
